Update source code link and license info

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -31,7 +31,7 @@
     {{ results | safe }}
 
     <div id="footer">
-        Dette verktøyet er skrevet av <a href="//no.wikipedia.org/wiki/Bruker:Danmichaelo">Danmichaelo</a>, basert på ideer fra <a href="//toolserver.org/~pathoschild/accounteligibility/">AccountEligibility</a>, og er utgitt med <a href="./?show=source">åpen kildekode</a>, tilgjengelig under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>.
+        Dette verktøyet er skrevet av <a href="//no.wikipedia.org/wiki/Bruker:Danmichaelo">Danmichaelo</a> og basert på ideer fra <a href="//toolserver.org/~pathoschild/accounteligibility/">AccountEligibility</a>. Kildekoden er <a href="https://github.com/danmichaelo/stemmeberettigelse">åpen</a> og <a href="http://unlicense.org/">offentlig eiendom</a> (PD).
     </div>
 </body>
 </html>
