--- a/stemmeberettigelse/templates/main.html
+++ b/stemmeberettigelse/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Stemmeberettiget?</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="https://tools-static.wmflabs.org/stemmeberettigelse/main.css" />
 </head>
 <body>
 	<h2>Sjekk stemmeberettigelse ved valg</h2>
